tests/ui/not_found.stderr
error[E0425]: cannot find value `x` in this scope
 --> $DIR/not_found.rs:4:19
  |
4 |     json!({ "a" : x });
  |                   ^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
